force-app/main/default/objects/Loan_Document_Audit__c/Loan_Document_Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for loan document actions.</description>
    <label>Loan Document Audit</label>
    <nameField>
        <displayFormat>LDA-{000000}</displayFormat>
        <label>Loan Document Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Document Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>