force-app/main/default/objects/Loan_Document_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Uploaded</fullName><default>true</default><label>Uploaded</label></value>
        <value><fullName>Replaced</fullName><default>false</default><label>Replaced</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        <value><fullName>Clarification_Requested</fullName><default>false</default><label>Clarification Requested</label></value>
        <value><fullName>Escalation_Alert</fullName><default>false</default><label>Escalation Alert</label></value>
        <value><fullName>Validation_Failed</fullName><default>false</default><label>Validation Failed</label></value>
        <value><fullName>Scan_Updated</fullName><default>false</default><label>Scan Updated</label></value>
        <value><fullName>Authenticity_Updated</fullName><default>false</default><label>Authenticity Updated</label></value>
    </valueSetDefinition></valueSet>
</CustomField>