force-app/main/default/objects/Loan_Document_Audit__c/fields/Action_On__c.field-meta.xml
<CustomField><fullName>Action_On__c</fullName><label>Action On</label><required>true</required><trackHistory>true</trackHistory><type>DateTime</type></CustomField>