force-app/main/default/objects/Loan_Document_Audit__c/fields/Actor__c.field-meta.xml
<CustomField><fullName>Actor__c</fullName><label>Actor</label><referenceTo>User</referenceTo><relationshipName>LoanDocumentAuditActor</relationshipName><deleteConstraint>SetNull</deleteConstraint><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>