force-app/main/default/objects/Loan_Document_Audit__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField><fullName>Content_Document_Id__c</fullName><label>Content Document Id</label><length>18</length><required>false</required><trackHistory>true</trackHistory><type>Text</type></CustomField>