force-app/main/default/objects/Loan_Document_Audit__c/fields/Details__c.field-meta.xml
<CustomField><fullName>Details__c</fullName><label>Details</label><length>32768</length><required>false</required><trackHistory>true</trackHistory><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>