force-app/main/default/objects/Loan_Document_Audit__c/fields/Loan__c.field-meta.xml
<CustomField><fullName>Loan__c</fullName><label>Loan</label><referenceTo>Loan__c</referenceTo><relationshipName>LoanDocumentAudits</relationshipName><deleteConstraint>Restrict</deleteConstraint><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>