force-app/main/default/objects/Loan_Document_Audit__c/fields/Loan_Document__c.field-meta.xml
<CustomField><fullName>Loan_Document__c</fullName><label>Loan Document</label><referenceTo>Loan_Document__c</referenceTo><relationshipName>LoanDocumentAuditEntries</relationshipName><deleteConstraint>SetNull</deleteConstraint><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>