force-app/main/default/objects/Loan_Document_Audit__c/fields/New_Status__c.field-meta.xml
<CustomField><fullName>New_Status__c</fullName><label>New Status</label><length>80</length><required>false</required><trackHistory>true</trackHistory><type>Text</type></CustomField>