force-app/main/default/objects/Loan_Document_Audit__c/fields/Prior_Status__c.field-meta.xml
<CustomField><fullName>Prior_Status__c</fullName><label>Prior Status</label><length>80</length><required>false</required><trackHistory>true</trackHistory><type>Text</type></CustomField>