force-app/main/default/objects/Loan_Document_Audit__c/listViews/Approved_Today.listView-meta.xml
<ListView>
    <fullName>Approved_Today</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Loan_Document__c</columns>
    <columns>Action__c</columns>
    <columns>Action_On__c</columns>
    <columns>Actor__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Action_On__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Approved Today</label>
</ListView>